[tool.poetry]
name = "git-urlforfile"
version = "0.1.0"
description = "Prints the forge url for a given file of a Git repository checkout"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
license = "Apache 2.0"
homepage = "https://github.com/agateau/git-urlforfile"
repository = "https://github.com/agateau/git-urlforfile"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers"
]
packages = [
    { include = "uff" }
]

[tool.poetry.dependencies]
python = "^3.6"
gitpython = "^3.1.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
git-uff = "uff.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
