[project]
name = "git-uff"
version = "0.5.0"
description = "Prints the forge URL for a given file of a Git repository checkout"
authors = [{ name = "Aurélien Gâteau", email = "mail@agateau.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "gitpython>=3.1.12,<4",
    "pyperclip>=1.8.2,<2",
]

[project.urls]
Homepage = "https://github.com/agateau/git-uff"
Repository = "https://github.com/agateau/git-uff"

[project.scripts]
git-uff = "git_uff.main:main"

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
